// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RootContainer> initialy renders 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg"
    />
    <p>
      <code>
        Welcome to Github App
      </code>
    </p>
  </header>
  <div
    className="container container--form-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-md-6 d-flex"
      >
        <h3
          className="text-left font-weight-bold"
        >
          Insert user nickname
        </h3>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-12 mx-auto"
      >
        <div
          className="form"
        >
          <div
            className="input-group mb-6"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
                id="basic-addon1"
              >
                @
              </span>
            </div>
            <input
              aria-describedby="basic-addon1"
              aria-label="Username"
              className="form-control"
              defaultValue="vyozh32"
              placeholder="Username"
              type="text"
            />
            <button
              className="btn btn-primary"
              onClick={[Function]}
              type="submit"
            >
              Submit
            </button>
          </div>
          <div
            className="error-block"
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`<RootContainer> renders with repos data 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg"
    />
    <p>
      <code>
        Welcome to Github App
      </code>
    </p>
  </header>
  <div
    className="container container--form-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-md-6 d-flex"
      >
        <h3
          className="text-left font-weight-bold"
        >
          Insert user nickname
        </h3>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-12 mx-auto"
      >
        <div
          className="form"
        >
          <div
            className="input-group mb-6"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
                id="basic-addon1"
              >
                @
              </span>
            </div>
            <input
              aria-describedby="basic-addon1"
              aria-label="Username"
              className="form-control"
              defaultValue="vyozh32"
              placeholder="Username"
              type="text"
            />
            <button
              className="btn btn-primary"
              onClick={[Function]}
              type="submit"
            >
              Submit
            </button>
          </div>
          <div
            className="error-block"
          />
        </div>
      </div>
    </div>
    <div
      className="user-container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="user-profile d-flex"
          >
            <div
              className="avatar flex-column"
            >
              <img
                className="rounded"
                src="https://some-avatar-url.com"
              />
              <h3
                className="font-weight-bold"
              >
                Test name
              </h3>
              <h4
                className="p-2"
              >
                test location
              </h4>
              <p
                className="text-secondary"
              >
                user_test
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-md-8 flex-column"
        >
          <div
            className="row"
          >
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Followers 12
              </span>
            </div>
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Following 43
              </span>
            </div>
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Repositories 5
              </span>
            </div>
          </div>
          <div
            className="row"
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-12 d-flex"
      >
        <button
          className="btn btn-big btn-primary"
          onClick={[Function]}
        >
          Get repositories
        </button>
      </div>
      <div
        className="repos-list col-md-12"
      >
        <table
          class="table table-striped table-dark table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                #
              </th>
              <th
                scope="col"
              >
                Name
              </th>
              <th
                scope="col"
              >
                Description
              </th>
              <th
                scope="col"
              >
                Archived
              </th>
              <th
                scope="col"
              >
                Created_at
              </th>
              <th
                scope="col"
              >
                Fork
              </th>
              <th
                scope="col"
              >
                Forks
              </th>
              <th
                scope="col"
              >
                Issues
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="table-row"
              onClick={[Function]}
            >
              <td
                colspan="8"
                scope="col"
              >
                Repos name
              </td>
            </tr>
            <tr
              className="table-row"
              onClick={[Function]}
            >
              <td
                colspan="8"
                scope="col"
              >
                Repos name
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RootContainer> renders with user data 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg"
    />
    <p>
      <code>
        Welcome to Github App
      </code>
    </p>
  </header>
  <div
    className="container container--form-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-md-6 d-flex"
      >
        <h3
          className="text-left font-weight-bold"
        >
          Insert user nickname
        </h3>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-12 mx-auto"
      >
        <div
          className="form"
        >
          <div
            className="input-group mb-6"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
                id="basic-addon1"
              >
                @
              </span>
            </div>
            <input
              aria-describedby="basic-addon1"
              aria-label="Username"
              className="form-control"
              defaultValue="vyozh32"
              placeholder="Username"
              type="text"
            />
            <button
              className="btn btn-primary"
              onClick={[Function]}
              type="submit"
            >
              Submit
            </button>
          </div>
          <div
            className="error-block"
          />
        </div>
      </div>
    </div>
    <div
      className="user-container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="user-profile d-flex"
          >
            <div
              className="avatar flex-column"
            >
              <img
                className="rounded"
                src="https://some-avatar-url.com"
              />
              <h3
                className="font-weight-bold"
              >
                Test name
              </h3>
              <h4
                className="p-2"
              >
                test location
              </h4>
              <p
                className="text-secondary"
              >
                user_test
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-md-8 flex-column"
        >
          <div
            className="row"
          >
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Followers 12
              </span>
            </div>
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Following 43
              </span>
            </div>
            <div
              className="col-md-4 p-2"
            >
              <span
                className="text-info font-weight-bold"
              >
                Repositories 5
              </span>
            </div>
          </div>
          <div
            className="row"
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-12 d-flex"
      >
        <button
          className="btn btn-big btn-primary"
          onClick={[Function]}
        >
          Get repositories
        </button>
      </div>
      <div
        className="repos-list col-md-12"
      >
        <table
          class="table table-striped table-dark table-hover"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                #
              </th>
              <th
                scope="col"
              >
                Name
              </th>
              <th
                scope="col"
              >
                Description
              </th>
              <th
                scope="col"
              >
                Archived
              </th>
              <th
                scope="col"
              >
                Created_at
              </th>
              <th
                scope="col"
              >
                Fork
              </th>
              <th
                scope="col"
              >
                Forks
              </th>
              <th
                scope="col"
              >
                Issues
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th
                colspan="8"
                scope="row"
              >
                No data
              </th>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
